Fix formatting issue of large gap before error messages

--- a/src/components/ApiKeyError/ApiKeyError.css
+++ b/src/components/ApiKeyError/ApiKeyError.css
@@ -6,6 +6,7 @@
     height: 25rem;
     margin: 1rem;
     text-align: center;
+    margin-top: -7rem;
 }
 
 .ApiKeyErrorText {
