--- a/src/components/CorsError/CorsError.css
+++ b/src/components/CorsError/CorsError.css
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: column;
     justify-content: top;
-    align-items: center;
+    align-items: top;
     height: 25rem;
     margin: 1rem;
     text-align: center;
+    margin-top: -7rem;
 }
 
 .CorsErrorText {
